# xueliu-mahjong-ai

./: .gitignore  PROJECT_CLEAN_RESTART_REPORT.md  PROJECT_PLAN.md  README.md  pyproject.toml  启动中文标注工具_X-AnyLabeling.bat  启动中文标注工具_round2_human_review.bat
configs/: app.yaml  model.yaml  rule_xueliu.yaml  screen_profile.yaml
docs/: cleanup_removed_old_rounds_20260705.txt  cleanup_removed_paths_20260705.txt  development_plan_completion_20260705.md  project_status_and_cleanup_20260705.md  realtime_replay_usage.md  recommendation_readiness_plan_20260712.md  selfplay_strategy_optimization_20260717.md  strategy_ui_optimization_development_plan_20260717.md  structured_table_reliability_20260711.md  血流麻将AI辅助项目下一步开发计划.md
launcher/: XueliuRealtimeLauncher.cs
scripts/: backtest_video.py  build_rotated_plus_yolo_mahjong_v7.py  calibrate_recommendation_threshold.py  extract_clean_frames.py  package_runtime.py  prelabel_images.py  train_chinese_detection_round.py  train_douyin_reviewed_round.py  train_manual39_and_make_labelu_preannotations.py  train_merged_dense_after_current.py  train_plus_yolo_mahjong_v7_and_backtest.py  train_rotated_round1.py  train_rotated_round1_highres.py
tests/: test_dedupe.py  test_detection_exporter.py  test_detection_validator.py  test_discard_zones.py  test_game_logger.py  test_game_phase.py  test_manifest_report.py  test_monte_carlo.py  test_readiness_calibration.py  test_realtime_stabilizer.py  test_recommendation_readiness.py  test_replay_test.py  test_roboflow_downloader.py  test_roboflow_mahjong_converter.py  test_roi_config.py  test_tiles.py  (+6 more)
(+80 files in other folders)
